test/simple/ill-typed/wrap_lazy_tail2.caprice
(* TEST
  typing = ill-typed;
  flags = " -s -w";
  typecheck;
*)

let f (ls : list (int -> int)) : unit =
  let w : list ({ i : int | i > 0 } -> int) = ls in
  let _ = (* pull on list *)
    match w with
    | [] | _ :: _ -> ()
    end
  in
  (* w still references the symbol and has to look up the value when matching *)
  let ls2 = (fun i -> i) :: w in
  match ls2 with
  | _ :: [] -> ()
  | _ :: f :: _ ->
    let _ = f 0 in (* ERROR: application error *)
    ()
  end
